# lacuna-research-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml  server.json
.github/workflows/: ci.yml  publish-mcp.yml  release.yml
lacuna_research_mcp/: __init__.py  client.py  config.py  errors.py  ids.py  normalize.py  server.py  tools.py  truncation.py
tests/: test_client.py  test_config.py  test_ids.py  test_normalize.py  test_server.py  test_tools.py  test_truncation.py
