[project]
name = "lacuna-research-mcp"
version = "0.1.2"
description = "MCP server for Lacuna, a research map for machine learning: search directions, papers, authors, venues, and AI-generated research proposals."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Tiptree Advanced Systems Corporation", email = "martin@tiptreesystems.com" }]
keywords = ["mcp", "model-context-protocol", "research", "machine-learning", "literature-search", "lacuna"]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.28.1,<2",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://lacuna.tiptreesystems.com"
Repository = "https://github.com/tiptreesystems/lacuna-research-mcp"
Paper = "https://arxiv.org/abs/2606.26246"

[project.scripts]
lacuna-research-mcp = "lacuna_research_mcp.server:main"

[project.optional-dependencies]
test = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["lacuna_research_mcp"]

[tool.setuptools.package-data]
lacuna_research_mcp = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E4", "E7", "E9", "F", "I", "S", "SIM", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
